--- a/form-v.html
+++ b/form-v.html
@@ -19,9 +19,9 @@
 
     <h2 style="text-align: center">Please fill the Form</h2>
     <form 
-      id="form"
+      name="haha"
       method="POST"
-      action="https://script.google.com/macros/s/AKfycbxz_PieZPaSgR2Ug0I4S5gbs7UG-So3CulqNVF2KIBNrNSORo5VpQ1nClOhRJJRKfhE_w/exec"
+      action=""
     >
       <input name="Name" type="text" placeholder="Name" required />
 
@@ -35,11 +35,14 @@
     </form>
     <div class="footer">Copyright © 2023. All rights are reserved</div>
     <script>
-      const form = document.querySelector("form")
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
-  window.location.replace("thanks.html");
-});
+const scriptURL = 'https://script.google.com/macros/s/AKfycbxz_PieZPaSgR2Ug0I4S5gbs7UG-So3CulqNVF2KIBNrNSORo5VpQ1nClOhRJJRKfhE_w/exec'
+    const form = document.forms['haha']
+    form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+     .then(() => {  window.location.replace("thanks.html"); })
+    .catch(error => console.error('Error!', error.message))
+    })
     </script>
   </body>
 </html>
